--- a/finetuning_mistral.ipynb
+++ b/finetuning_mistral.ipynb
@@ -573,11 +573,7 @@
    "source": [
     "NAME = f\"uc_tc_mistral_0.3_7b_instruct_{NUM_TRAIN_EPOCHS}epochs_final\"\n",
     "model.save_pretrained(NAME)\n",
-    "tokenizer.save_pretrained(NAME)\n",
-    "# WRITE_TOKEN = \"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\"\n",
-    "# NAME = \"usecase_to_testcase/\"+NAME\n",
-    "# model.push_to_hub(NAME, token = WRITE_TOKEN) # Online saving\n",
-    "# tokenizer.push_to_hub(NAME, token = WRITE_TOKEN) # Online saving"
+    "tokenizer.save_pretrained(NAME)"
    ]
   },
   {
